# CareLink

./: .gitignore  README.md  package-lock.json
backend/: .env.example  auth_kakao.py  chatbot_core.py  check_db.py  database.py  kakao_oauth.py  main.py  modify_db.py  ocr_records.py  pyproject.toml  symptoms_config.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: AuthActions.jsx  FAQModal.jsx  Header.jsx  LoginForm.jsx  NotificationBell.jsx  NotificationCenter.jsx  NotificationToast.jsx  PatientHistoryCard.jsx
frontend/src/context/: NotificationContext.jsx
frontend/src/pages/: ChatBotPage.jsx  FeedbackPage.jsx  HomePage.jsx  LoginPage.jsx  PatientInfoPage.jsx
frontend/src/routes/: Router.jsx
kakao-login/: api.py
